new routes and icons

--- a/assets/css/consumer/header.css
+++ b/assets/css/consumer/header.css
@@ -32,7 +32,7 @@
   border-radius: 10px;
   font-size: 17px;
   width: 30%;
-  background: url(../../../public/assets/icons/search.png) no-repeat;
+  background: url(../../icons/search.png) no-repeat;
   background-position: right 3% center;
   background-size: 20px;
   background-color: #fffdf9;
