--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,9 +1,10 @@
 * {
-    padding: 0;
-    margin: 0;
-    font-family: 'Lexend';
+  padding: 0;
+  margin: 0;
+  font-family: 'Lexend';
+  color: #3f3f3f
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
