--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -14,7 +14,7 @@
       <nav>
         <ul>
           <li class="navbar-item active"><a class="navbar-link" href="/">Início</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="/catalogue">Produtos</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="/products">Produtos</a></li>
           <li class="navbar-item"><a class="navbar-link" href="../purchases/index.html">Minhas compras</a></li>
         </ul>
       </nav> 
