--- a/views/consumer/products/index.ejs
+++ b/views/consumer/products/index.ejs
@@ -1,2 +1,29 @@
 <%- contentFor('content') %>
 
+<div class='container'>
+    <div class='lateral-menu'>
+      <h2>Categorias</h2>
+      <ul>
+        <li><a href="#">Coleiras</a></li>
+        <li><a href="#">Brinquedos</a></li>
+        <li><a href="#">Rações</a></li>
+      </ul>
+      
+      <h2>Bichos</h2>
+      <ul>
+        <li><a href="#">Cachorro</a></li>
+        <li><a href="#">Gato</a></li>
+      </ul>
+    </div>
+    <div class='items'>
+      <a href="../catalogue/show.html" class="item">
+        <div class="image-container">
+          <img src="https://50192.cdn.simplo7.net/static/50192/sku/cachorro-racao-golden-formula-mini-bits-para-cachorro-adulto-carne-e-arroz--p-1590533328758.jpg" class="image" alt="product-image">
+        </div>
+        <div class="item-details">
+          <h2 class="title">Ração Golden 15 Kg</h2>
+          <h3>R$ 58,80</h3>
+        </div>
+      </a>
+    </div>
+  </div>
