--- a/assets/css/consumer/header.css
+++ b/assets/css/consumer/header.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 20px 50px;
   border-bottom: 2px solid #3f3f3f;
-  background-color: #deeaec;
+  background-color: #d5f3f9;
   color: #808080;
 }
 
@@ -20,7 +20,7 @@
 }
 
 #navbar-logo:hover {
-  background-color: #deeaec;
+  background-color: #d5f3f9;
   color: #3f3f3f;
 }
 
@@ -99,9 +99,19 @@
   margin-right: 5px;
   border: solid;
   border-radius: 10px;
-  border-color: #97b8a5;
-  background-color: #97b8a5;
+  border-color: #96e072;
+  background-color: #96e072;
   color: #fffdf9;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+
+.navbar-button:hover, .navbar-button:focus, .navbar-button:active{
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(1.1);
+  transform: scale(0.9);
 }
 
 #navbar-merchant-profile img {
