--- a/views/consumer/home/index.ejs
+++ b/views/consumer/home/index.ejs
@@ -7,22 +7,22 @@
 
 <div class="main_section">
   <h1>Mais vendidos</h1>
-  <div class='items'>
+  <div class='home-items'>
   <% products.forEach((product)=>{ %>
-    <a href="/products/<%= product.id %>" class="item">
-      <div class="image-container">
-        <img src="<%= product.image_url %>" class="image" alt="product-image">
+    <a href="/products/<%= product.id %>" class="home-item">
+      <div class="home-image-container">
+        <img src="<%= product.image_url %>" class="home-image" alt="product-image">
       </div>
-      <div class="item-details">
-        <h2 class="title"><%= product.name %></h2>
+      <div class="home-item-details">
+        <h2><%= product.name %></h2>
         <h3>R$ <%= product.price_cents / 100 %></h3>
       </div>
     </a>
   <% }) %>
   </div>
 
-  <a href="../catalogue/index.html" class="button">
+  <a href="../catalogue/index.html" class="button-blue">
     Ver mais
-    <div class="icon">➡️</div>
+  
   </a>
 </div>
