--- a/assets/css/consumer.css
+++ b/assets/css/consumer.css
@@ -3,3 +3,4 @@
 @import "consumer/items.css";
 @import "consumer/home-items.css";
 @import "consumer/slideshow.css";
+@import "consumer/lateral-menu.css";
