--- a/views/consumer/products/index.ejs
+++ b/views/consumer/products/index.ejs
@@ -8,12 +8,33 @@
         <li><a href="#">Brinquedos</a></li>
         <li><a href="#">Rações</a></li>
       </ul>
+
+      <hr class="solid">
       
       <h2>Bichos</h2>
       <ul>
         <li><a href="#">Cachorro</a></li>
         <li><a href="#">Gato</a></li>
       </ul>
+
+      <hr class="solid">
+
+      <h2>Lojistas</h2>
+      <ul>
+        <li><a href="#">Exemplo1</a></li>
+        <li><a href="#">Exemplo2</a></li>
+      </ul>
+
+      <hr class="solid">
+
+      <h2>Faixa de preço</h2>
+      <ul>
+        <li><a href="#">R$0,00 a R$25,00</a></li>
+        <li><a href="#">R$26,00 a R$50,00</a></li>
+        <li><a href="#">R$51,00 a R$100,00</a></li>
+        <li><a href="#">Acima de R$100,00</a></li>
+      </ul>
+
     </div>
     <div class='items'>
       <a href="../catalogue/show.html" class="item">
@@ -21,8 +42,8 @@
           <img src="https://50192.cdn.simplo7.net/static/50192/sku/cachorro-racao-golden-formula-mini-bits-para-cachorro-adulto-carne-e-arroz--p-1590533328758.jpg" class="image" alt="product-image">
         </div>
         <div class="item-details">
-          <h2 class="title">Ração Golden 15 Kg</h2>
-          <h3>R$ 58,80</h3>
+          <h3 class="title">Ração Golden 15 Kg</h3>
+          <h4>R$ 58,80</h4>
         </div>
       </a>
     </div>
