--- a/assets/css/consumer/items.css
+++ b/assets/css/consumer/items.css
@@ -1,28 +1,30 @@
-
 /* Items */
-
 .items {
     display: flex;
     background-color: white;
-    margin: 60px 40px;
-}
-
-.item {
-    box-shadow: 0 0 2px 0 #bababa;
+    margin: 0px 40px;
+    padding-top: 30px;
+  }
+  
+  .item {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
     border-radius: 5px;
     margin-right: 15px;
-    max-width: 30%;
-}
-
-.image-container {
-    padding: 20px;
+    width: 250px;
     height: 300px;
-}
-
-.image {
-    height: 100%;   
-}
-
-.item-details {
-    padding: 50px 15px;
-}
+    
+  }
+  
+  .image-container {
+    padding-top: 20px;
+    height: 200px;
+  }
+  
+  .image {
+    height: 80%;
+  }
+  
+  .item-details {
+    padding-bottom: 20px;
+  }
