--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -16,22 +16,31 @@
           <li class="navbar-item <% if(url == '/') { %>active<% } %>"><a class="navbar-link" href="/">Início</a></li>
           <li class="navbar-item <% if(url == '/products') { %>active<% } %>"><a class="navbar-link" href="/products">Produtos</a></li>
         </ul>
-      </nav> 
-
-      <a href="/shopping_cart">
-        <div id="navbar-consumer-area">
+      </nav>
+      
+      <div id="navbar-consumer-area">
+        <a href="/shopping_cart">
           <div id="navbar-cart" class="">
             <img src="/icons/shopping-cart.png" width="32" height="32" alt="shopping-cart">
             <span id="navbar-cart-counter" class="hidden"><%= shopping_cart.products.length %></span>
           </div>
-          <% if (session) { %>
-            <a href="../sign_in/index.html" class="navbar-button">Meu perfil</a>
-          <% } else { %>
-            <a href="../sign_in/index.html" class="navbar-button">Login</a>
-            <!-- <button class="navbar-button">SIGN-UP</button> -->
-          <% } %>
-        </div>       
-      </a>
+        </a>
+        <% if (session) { %>
+          <div class="dropdown">
+            <button class="dropbtn navbar-button"><img src="/icons/profile.png" width="32" height="32" alt="profile"></button>
+            <div class="dropdown-content">
+              <a href="#">Meu perfil</a>
+              <a href="#">Minhas compras</a>
+              <hr>
+              <a href="#">Sair</a>
+            </div>
+          </div>
+        <% } else { %>
+          <a href="../sign_in/index.html" class="navbar-button">Login</a>
+          <!-- <button class="navbar-button">SIGN-UP</button> -->
+        <% } %>
+      </div>       
+      
     </header>
 
     <%- content %>
