--- a/assets/css/consumer.css
+++ b/assets/css/consumer.css
@@ -4,3 +4,5 @@
 @import "consumer/home-items.css";
 @import "consumer/slideshow.css";
 @import "consumer/lateral-menu.css";
+@import "base/buttons.css";
+@import "consumer/cart.css";
