missing pages on consumer

--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -29,8 +29,8 @@
           <div class="dropdown">
             <button class="dropbtn navbar-button"><img src="/icons/profile.png" width="32" height="32" alt="profile"></button>
             <div class="dropdown-content">
-              <a href="#">Meu perfil</a>
-              <a href="#">Minhas compras</a>
+              <a href="/profile">Meu perfil</a>
+              <a href="/purchases">Minhas compras</a>
               <hr>
               <a href="#">Sair</a>
             </div>
