fixes on purchases index

--- a/views/consumer/purchases/index.ejs
+++ b/views/consumer/purchases/index.ejs
@@ -2,14 +2,14 @@
 
 <div class='lateral-menu'>
   <ul>
-    <li><a href="../profile/index.html">Meu perfil</a></li>
+    <li><a href="/profile">Meu perfil</a></li>
     <li><b><a href="#">Minhas compras</a></b></li>
   </ul>
 </div>
 <div class='purchases'>
   <h1>Minhas compras</h1>
 
-  <%= purchases.forEach((purchase) => { %>
+  <% purchases.forEach((purchase) => { %>
   <div class="purchase">
     <div class="header">
       <div class="left">
