merchant new pages

--- a/views/consumer/home/index.ejs
+++ b/views/consumer/home/index.ejs
@@ -6,7 +6,7 @@
 </div>
 
 <div class="main_section">
-  <h1>Mais vendidos</h1>
+  <h1>Novos produtos</h1>
   <div class='home-items'>
   <% products.forEach((product)=>{ %>
     <a href="/products/<%= product.id %>" class="home-item">
@@ -23,6 +23,5 @@
 
   <a href="../catalogue/index.html" class="button-blue">
     Ver mais
-  
   </a>
 </div>
