shopping cart improves

--- a/assets/css/consumer.css
+++ b/assets/css/consumer.css
@@ -6,3 +6,5 @@
 @import "consumer/lateral-menu.css";
 @import "base/buttons.css";
 @import "consumer/cart.css";
+@import "base/wrapper.css";
+@import "base/form-field.css";
