--- a/views/consumer/home/index.ejs
+++ b/views/consumer/home/index.ejs
@@ -21,7 +21,7 @@
   <% }) %>
   </div>
 
-  <a href="../catalogue/index.html" class="button-blue">
+  <a href="/products" class="button-blue">
     Ver mais
   
   </a>
