--- a/views/consumer/profile/edit.ejs
+++ b/views/consumer/profile/edit.ejs
@@ -1,5 +1,8 @@
 <%- contentFor('content') %>
+
+<section class="profile">
 <h1> Meu perfil </h1>
+<div class = "container-wrapper">
 <div class="wrapper">
   <form action="#">
      <div class="form-row">
@@ -37,3 +40,5 @@
   </div>
   </form>
   </div>
+</div>
+</section>
