--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -3,13 +3,13 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/consumer.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
-
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon.png">
     <title>iBichos</title>
   </head>
 
   <body>
     <header id="navbar">
-      <h1 id="navbar-logo"><a class="navbar-link" href="/">iBichos</a></h1>
+      <img src="icons/logo.png" class="logo">
       <input id="navbar-search" type="text">
       <nav>
         <ul>
