--- a/views/consumer/purchases/index.ejs
+++ b/views/consumer/purchases/index.ejs
@@ -1,47 +1,46 @@
 <%- contentFor('content') %>
 
-<div class='lateral-menu'>
-  <ul>
-    <li><a href="/profile">Meu perfil</a></li>
-    <li><b><a href="#">Minhas compras</a></b></li>
-  </ul>
-</div>
-<div class='purchases'>
-  <h1>Minhas compras</h1>
+<div class='purchase-container'>
+  <div class='lateral-menu'>
+    <h4>Meu perfil</h4>
+    <h4>Minhas compras</h4>
+  </div>
 
   <% purchases.forEach((purchase) => { %>
   <div class="purchase">
     <div class="header">
       <div class="left">
         <div>
-          <small>PEDIDO REALIZADO</small>
+          <p>PEDIDO REALIZADO</p>
           <p><%= purchase.created_at %></p>
         </div>
         <div>
-          <small>TOTAL</small>
+          <p>TOTAL</p>
           <p>R$ <%= purchase.total_price_cents / 100 %></p>
         </div>
       </div>
       <div class="right">
-        <small>PEDIDO Nº <%= purchase.id %>></small><br>
-        <a href="/purchase/<%= purchase.id %>">Visualizar comprovante</a>
+        <p>PEDIDO Nº <%= purchase.id %></p><br>
+        <p href="/purchase/<%= purchase.id %>">Visualizar comprovante</p>
       </div>
     </div>
     <div class="body">
       <h3><%= purchase.status %></h3>
-
-      <div class="items">
-        <% purchase.products.forEach((product) => { %>
-        <div class="item">
-          <div class="info">
-            <img src="<%= product.image_url %>" class="image" alt="product-image">
-            <div class="name"><%= product.name %></div>
-          </div>
-          <div class="values">
-            <p>Qtd: <% product.quantity %></p>
-            <p>R$ <%= product.price_cents / 100 %></p>
-          </div>
+      <div class="product_list">
+        <div class="table_header">
         </div>
+        <% shopping_cart.products.forEach((product)=>{ %>
+          <div class="product">
+            <img src="<%= product.image_url %>" alt="image" class="product_image" width="50px">
+  
+            <div class="product_name">
+              <h3><%= product.name %></h3>
+            </div>
+            <div class="product_infos">
+              <span class="product_qtd"><%= product.quantity %></span>
+              <span class="product_price">R$ <%= product.price_cents / 100 %></span>
+            </div>
+          </div>
         <% }) %>
       </div>
     </div>
