login and session logic

--- a/views/consumer/profile/edit.ejs
+++ b/views/consumer/profile/edit.ejs
@@ -7,7 +7,7 @@
   <form action="#">
      <div class="form-row">
         <div class="field">
-           <input type="text" required>
+           <input type="text" value="<%= session.customer.username %>" required>
            <label>Nome</label>
         </div>
         <div class="field">
