--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -25,7 +25,7 @@
             <span id="navbar-cart-counter" class="hidden"><%= shopping_cart.products.length %></span>
           </div>
         </a>
-        <% if (session) { %>
+        <% if (session.isLoggedIn) { %>
           <div class="dropdown">
             <button class="dropbtn navbar-button"><img src="/icons/profile.png" width="32" height="32" alt="profile"></button>
             <div class="dropdown-content">
