--- a/views/layouts/merchant.ejs
+++ b/views/layouts/merchant.ejs
@@ -20,7 +20,7 @@
       
       <div id="navbar-consumer-area">
 
-        <% if (session) { %>
+        <% if (session.isSignedIn) { %>
           <div class="dropdown">
             <button class="dropbtn navbar-button"><img src="/icons/profile.png" width="32" height="32" alt="profile"></button>
             <div class="dropdown-content">
