--- a/views/consumer/purchases/index.ejs
+++ b/views/consumer/purchases/index.ejs
@@ -29,16 +29,16 @@
       <div class="product_list">
         <div class="table_header">
         </div>
-        <% shopping_cart.products.forEach((product)=>{ %>
+        <% shopping_cart.forEach((item)=>{ %>
           <div class="product">
-            <img src="<%= product.image_url %>" alt="image" class="product_image" width="50px">
+            <img src="<%= item.product.image_url %>" alt="image" class="product_image" width="50px">
   
             <div class="product_name">
-              <h3><%= product.name %></h3>
+              <h3><%= item.product.name %></h3>
             </div>
             <div class="product_infos">
-              <span class="product_qtd"><%= product.quantity %></span>
-              <span class="product_price">R$ <%= product.price_cents / 100 %></span>
+              <span class="product_qtd"><%= item.quantity %></span>
+              <span class="product_price">R$ <%= item.product.price_cents / 100 %></span>
             </div>
           </div>
         <% }) %>
