--- a/views/merchant/orders/index.ejs
+++ b/views/merchant/orders/index.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('content') %>
 
 <section>
-  <h2>Produtos cadastrados</h2>
+  <h2>Histórico de pedidos</h2>
   <table>
     <tr>
       <th>Produtos</th>
