--- a/assets/css/consumer/items.css
+++ b/assets/css/consumer/items.css
@@ -1,6 +1,7 @@
 /* Items */
 .items {
     display: flex;
+    flex-wrap: wrap;
     background-color: white;
     margin: 0px 40px;
     padding-top: 30px;
@@ -10,6 +11,7 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     text-align: center;
     border-radius: 5px;
+    margin-bottom: 25px;
     margin-right: 15px;
     width: 250px;
     height: 300px;
