--- a/views/merchant/profile/edit.ejs
+++ b/views/merchant/profile/edit.ejs
@@ -1,1 +1,50 @@
 <%- contentFor('content') %>
+
+<section class="profile">
+  <h1> Meu perfil </h1>
+  <div class = "container-wrapper">
+  <div class="wrapper">
+    <form action="#">
+      <div class="form-row">
+        <div class="field">
+           <input type="text" required>
+           <label>Usuário</label>
+        </div>
+     </div>
+       <div class="form-row">
+          <div class="field">
+             <input type="text" required>
+             <label>Nome da empresa</label>
+          </div>
+          <div class="field">
+             <input type="text" required>
+             <label>CNPJ</label>
+          </div>
+       </div>
+       <div class="form-row">
+          <div class="field">
+             <input type="text" required>
+             <label>Endereço</label>
+          </div>
+          <div class="field">
+             <input type="text" required>
+             <label>Telefone</label>
+          </div>
+       </div>
+       <div class="form-row">
+       <div class="field">
+          <input type="email" required>
+          <label>E-mail</label>
+       </div>
+       <div class="field">
+          <input type="password" required>
+          <label>Senha</label>
+       </div>
+    </div>
+    <div class="button-green">
+       Salvar
+    </div>
+    </form>
+    </div>
+  </div>
+  </section>
