form for product crud on merchant

--- a/views/merchant/profile/edit.ejs
+++ b/views/merchant/profile/edit.ejs
@@ -1,6 +1,6 @@
 <%- contentFor('content') %>
 
-<section class="profile">
+<section class="form">
   <h1> Meu perfil </h1>
   <div class = "container-wrapper">
   <div class="wrapper">
