--- a/assets/css/base/wrapper.css
+++ b/assets/css/base/wrapper.css
@@ -1,5 +1,5 @@
 
-.profile h1 {
+.form h1 {
   margin-top: 60px;
   margin-right: 80px;
   margin-left: 80px;
@@ -62,6 +62,6 @@
     margin: 32px 0;
   }
 
-  .profile .button-green{
+  .form .button-green{
     margin-left: 610px;
   }
