--- a/views/merchant/products/form.ejs
+++ b/views/merchant/products/form.ejs
@@ -1,26 +1,37 @@
 <%- contentFor('content') %>
 
-<section> 
-  <h1 id="product-title">Informações do Produto</h1>
-  <form>
-    <div class="row">
-      <label for="product-name">Nome:</label>
-      <input type="text" id="product-name" name="product-name">
+<section class="form">
+  <h1> Informações do produto </h1>
+  <div class = "container-wrapper">
+    <div class="wrapper">
+      <form action="#">
+        <div class="form-row">
+          <div class="field">
+            <label for="avatar">Escolha uma foto para o produto:</label>
+            <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="field">
+            <input type="text" required>
+            <label>Nome</label>
+          </div>
+          <div class="field">
+            <input type="text" required>
+            <label>Preço</label>
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="field">
+            <input type="text-area" required>
+            <label>Descrição</label>
+          </div>
+        </div>
+        
+        <div class="button-green">
+          Salvar
+        </div>
+      </form>
     </div>
-    <div class="row">
-      <label for="product-price">Preço:</label>
-      <input type="number" id="product-price" name="product-price">
-    </div>
-    <div class="row">
-      <label for="product-description">Descrição:</label>
-      <input type="text" id="product-description" name="product-description">
-    </div>
-    <div class="row">
-      <label for="avatar">Escolha uma foto para o produto:</label>
-      <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
-    </div>
-    <div class="row">
-      <button id="save">Salvar</button>
-    </div>
-  </form>
+  </div>
 </section>
