--- a/assets/css/consumer.css
+++ b/assets/css/consumer.css
@@ -7,3 +7,4 @@
 @import "consumer/cart.css";
 @import "consumer/purchase-items.css";
 @import "consumer/purchases.css";
+@import "consumer/show.css";
