--- a/assets/css/base/buttons.css
+++ b/assets/css/base/buttons.css
@@ -106,3 +106,28 @@
     -webkit-transform: scale(1.1);
     transform: scale(0.9);
   }
+
+  .button-add{
+    font-size: 15px;
+    font-weight: bold;
+    background: #96e072;
+    width: 150px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #1f1f1f;
+    cursor: pointer;
+    border-radius:20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+  }
+  
+  .button-add:hover, .button-add:focus, .button-add:active{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(0.9);
+  }
