--- a/assets/css/consumer/items.css
+++ b/assets/css/consumer/items.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     background-color: white;
-    margin: 0px 40px;
+    margin-left: 50px;
     padding-top: 30px;
   }
   
@@ -13,7 +13,7 @@
     border-radius: 5px;
     margin-bottom: 25px;
     margin-right: 15px;
-    width: 250px;
+    width: 230px;
     height: 300px;
     
   }
