--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,30 @@
 @import "base/wrapper.css";
 @import "base/buttons.css";
 
+:root {
+  --primary-color: #1e90ff;
+  --light-text-color: #EEE;
+  --background-color: #EEE;
+  --text-color: #111;
+  --border-color: rgba(0, 0, 0, 0.175);
+}
+
+body {
+  font-size: 16px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.dark-mode {
+  --primary-color: #1e90ff !important;
+  --light-text-color: #EEE !important;
+  --background-color: #111 !important;
+  --border-color: rgba(255, 255, 255, 0.175) !important;
+  --text-color: #EEE !important;
+}
+
+/* ###### */
+
 * {
   padding: 0;
   margin: 0;
