--- a/assets/css/base/buttons.css
+++ b/assets/css/base/buttons.css
@@ -7,7 +7,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    color: #1f1f1f;
+    color: #1c1c1;
     cursor: pointer;
     border-radius:20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -32,7 +32,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    color: #1c1c1c;
+    color: #1c1c1;
     cursor: pointer;
     border-radius:20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -57,7 +57,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    color: #1c1c1c;
+    color: #1c1c1;
     cursor: pointer;
     border-radius:20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -91,7 +91,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    color: #1f1f1f;
+    color: #1c1c1;
     cursor: pointer;
     border-radius:20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -116,7 +116,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    color: #1f1f1f;
+    color: #1c1c1;
     cursor: pointer;
     border-radius:20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
