--- a/assets/css/base/wrapper.css
+++ b/assets/css/base/wrapper.css
@@ -18,7 +18,7 @@
 
 .wrapper{
     width: 900px;
-    background: #fbfefb;
+    background: var(---second-background);
     border-radius: 15px;
     box-shadow: 0px 15px 20px rgba(0,0,0,0.2);
     align-items: center;
