--- a/assets/css/consumer/home-items.css
+++ b/assets/css/consumer/home-items.css
@@ -2,12 +2,13 @@
 
 .home-items {
     display: flex;
-    background-color: white;
+    background-color: var(--background-color);
     margin: 60px 40px;
   }
   
   .home-item {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: var(--second-background);
     text-align: center;
     border-radius: 5px;
     margin-right: 15px;
