--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -61,3 +61,13 @@ h4:hover {
   color: #E82A2A;
   transition-duration: 0.3s;
 }
+
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
