--- a/assets/css/base/buttons.css
+++ b/assets/css/base/buttons.css
@@ -1,5 +1,5 @@
 .button-green{
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
     background: #96e072;
     width: 160px;
@@ -24,7 +24,7 @@
   }
   
   .button-red{
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
     background: #F18B7E;
     width: 160px;
@@ -49,7 +49,7 @@
   }
   
   .button-blue{
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: bold;
     background: #88ccf1;
     width: 160px;
@@ -83,7 +83,7 @@
   
 
   .button-green-medium{
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: bold;
     background: #96e072;
     width: 100px;
@@ -108,7 +108,7 @@
   }
 
   .button-add{
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: bold;
     background: #96e072;
     width: 150px;
