--- a/assets/css/base/form-field.css
+++ b/assets/css/base/form-field.css
@@ -1,7 +1,7 @@
 form .field input:focus ~ label,
 form .field input:valid ~ label{
   top: 0%;
-  font-size: 16px;
+  font-size: 1.3rem;
   color: #3F3F3F;
   background: #fff;
   transform: translateY(-50%);
@@ -10,7 +10,7 @@ form .content{
   display: flex;
   width: 100%;
   height: 50px;
-  font-size: 16px;
+  font-size: 1.3rem;
   align-items: center;
   justify-content: space-around;
 }
