--- a/assets/css/base/buttons.css
+++ b/assets/css/base/buttons.css
@@ -131,3 +131,29 @@
     -webkit-transform: scale(1.1);
     transform: scale(0.9);
   }
+
+  .button-green-small{
+    font-size: 15px;
+    font-weight: bold;
+    background: #96e072;
+    width: 50px;
+    height: 25px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #1c1c1;
+    cursor: pointer;
+    border-radius:10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+  }
+  
+  .button-green-small:hover, .button-green:focus, .button-green:active{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(0.9);
+  }
