--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -9,7 +9,7 @@
 
   <body>
     <header id="navbar">
-      <img src="icons/logo.png" class="logo">
+      <img src="/icons/logo.png" class="logo">
       <input id="navbar-search" type="text">
       <nav>
         <ul>
@@ -42,7 +42,7 @@
             </div>
           </div>
         <% } else { %>
-          <a href="/login" class="navbar-button">Login</a>
+          <a href="/login" class="button-green-small">Login</a>
         <% } %>
       </div>       
       
