add logica de incremento e decremento de fontes

--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -46,8 +46,38 @@
         <% } %>
       </div>       
       
+      <button class="increase_font">
+        +     
+      </button>
+      <button class="decrease_font">
+        -
+      </button>
     </header>
 
     <%- content %>
   </body>
 </html>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    document.querySelector('html').style.fontSize = localStorage.getItem('font-size')
+  })
+
+  document.querySelector('.increase_font').addEventListener( 'click', () => {
+    const documentStyle = getComputedStyle(document.querySelector('html'))
+
+    let nextValue = Math.min(parseInt(documentStyle.fontSize), 30) + 2
+    document.querySelector('html').style.fontSize = `${nextValue}px`
+    
+    localStorage.setItem('font-size', `${nextValue}px`)
+  })
+
+  document.querySelector('.decrease_font').addEventListener( 'click', () => {
+    const documentStyle = getComputedStyle(document.querySelector('html'))
+
+    let nextValue = Math.max(parseInt(documentStyle.fontSize), 16) - 2
+    document.querySelector('html').style.fontSize = `${nextValue}px`
+
+    localStorage.setItem('font-size', `${nextValue}px`)
+  })
+</script>
