add logica de acessibilidade

--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/admin.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
+    <script src="/js/font_size_increase.js"> </script>
+    <script src="/js/dark_mode_toggle.js"> </script>
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon.png">
     <title>iBichos | Admin</title>
   </head>
