--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/consumer.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
+    <script src="/js/font_size_increase.js"> </script>
+    <script src="/js/dark_mode_toggle.js"> </script>
+
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon.png">
     <title>iBichos</title>
   </head>
@@ -52,32 +55,12 @@
       <button class="decrease_font">
         -
       </button>
+
+      <button class='dark_toggle'>
+        ICONE LAMPADA
+      </button>
     </header>
 
     <%- content %>
   </body>
 </html>
-
-<script>
-  document.addEventListener('DOMContentLoaded', () => {
-    document.querySelector('html').style.fontSize = localStorage.getItem('font-size')
-  })
-
-  document.querySelector('.increase_font').addEventListener( 'click', () => {
-    const documentStyle = getComputedStyle(document.querySelector('html'))
-
-    let nextValue = Math.min(parseInt(documentStyle.fontSize), 30) + 2
-    document.querySelector('html').style.fontSize = `${nextValue}px`
-    
-    localStorage.setItem('font-size', `${nextValue}px`)
-  })
-
-  document.querySelector('.decrease_font').addEventListener( 'click', () => {
-    const documentStyle = getComputedStyle(document.querySelector('html'))
-
-    let nextValue = Math.max(parseInt(documentStyle.fontSize), 16) - 2
-    document.querySelector('html').style.fontSize = `${nextValue}px`
-
-    localStorage.setItem('font-size', `${nextValue}px`)
-  })
-</script>
