adding buttons to navbar

--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -19,6 +19,9 @@
           <li class="navbar-item <% if(url == '/admin/products') { %>active<% } %>"><a class="navbar-link" href="/admin/products">Produtos</a></li>
         </ul>
       </nav>
+      <img src="/icons/minus.png" width="24" height="24" class="decrease_font"></img>
+      <img src="/icons/plus.png" width="24" height="24" class="increase_font"></img>
+      <img src="/icons/lamp.png" width="32" height="32" class='dark_toggle'></img>
       
       <a href="/logout">Sair</a>
   
