--- a/views/layouts/consumer.ejs
+++ b/views/layouts/consumer.ejs
@@ -20,7 +20,10 @@
           <li class="navbar-item <% if(url == '/products') { %>active<% } %>"><a class="navbar-link" href="/products">Produtos</a></li>
         </ul>
       </nav>
-      
+      <img src="/icons/minus.png" width="24" height="24" class="decrease_font"></img>
+      <img src="/icons/plus.png" width="24" height="24" class="increase_font"></img>
+      <img src="/icons/lamp.png" width="32" height="32" class='dark_toggle'></img>
+
       <div id="navbar-consumer-area">
         <a href="/shopping_cart">
           <div id="navbar-cart" class="">
@@ -48,17 +51,6 @@
           <a href="/login" class="button-green-small">Login</a>
         <% } %>
       </div>       
-      
-      <button class="increase_font">
-        +     
-      </button>
-      <button class="decrease_font">
-        -
-      </button>
-
-      <button class='dark_toggle'>
-        ICONE LAMPADA
-      </button>
     </header>
 
     <%- content %>
