--- a/views/layouts/merchant.ejs
+++ b/views/layouts/merchant.ejs
@@ -18,6 +18,9 @@
           <li class="navbar-item <% if(url == '/merchant/products') { %>active<% } %>"><a class="navbar-link" href="/merchant/products">Produtos</a></li>
         </ul>
       </nav> 
+      <img src="/icons/minus.png" width="24" height="24" class="decrease_font"></img>
+      <img src="/icons/plus.png" width="24" height="24" class="increase_font"></img>
+      <img src="/icons/lamp.png" width="32" height="32" class='dark_toggle'></img>
   
       <div class="dropdown">
         <div id="navbar-merchant-profile">
