--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,15 +5,18 @@
     <link rel="stylesheet" href="views/app.css">
 </head>
 <body>
+    
     <form action="/login" method="post">
-        <h2>Login</h2>
-        <div class="input-field">
-            <input type="text" name="username" id="username" placeholder="Enter Username">
-        </div>
+        <div class="wrapper">
+            <h2>Login</h2>
+                <div class="input-field">
+                    <input type="text" name="username" id="username" placeholder="Enter Username">
+                </div>
         <div class="input-field">
             <input type="password" name="password" id="password" placeholder="Enter Password">
         </div>
-        <input type="submit" value="LogIn">
+            <input type="submit" value="LogIn">
+        </div>
     </form>
 </body>
 </html>
